--- a/scenes/vue_administration.fxml
+++ b/scenes/vue_administration.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="anchorMenuAdministration" stylesheets="@styles/style_admin_satisfaction_admin_liste_module.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MenuAdministrationController">
+<AnchorPane fx:id="anchorStudentOfficeMenu" stylesheets="@styles/style_admin_satisfaction_admin_liste_module.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MenuAdministrationController">
    <children>
       <VBox prefHeight="400.0" prefWidth="640.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <children>
@@ -21,8 +21,8 @@
             <menus>
               <Menu mnemonicParsing="false" text="Mon compte">
                 <items>
-                  <MenuItem fx:id="retourMenu" mnemonicParsing="false" onAction="#fonctionRetour" text="retour au menu" />
-                  <MenuItem fx:id="quiitMenu" mnemonicParsing="false" onAction="#fonctionQuit" text="Quitter" />
+                  <MenuItem fx:id="backMenu" mnemonicParsing="false" onAction="#backFunction" text="retour au menu" />
+                  <MenuItem fx:id="quitMenu" mnemonicParsing="false" onAction="#quitFunction" text="Quitter" />
                 </items>
               </Menu>
             </menus>
@@ -50,23 +50,23 @@
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <TextField fx:id="delaisAbsence" onAction="#modifierDelaisAbsence" prefHeight="15.0" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                              <TextField fx:id="delayNonattendance" onAction="#changeDelayNonattendance" prefHeight="15.0" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                  <GridPane.margin>
                                     <Insets left="25.0" right="25.0" />
                                  </GridPane.margin>
                               </TextField>
                               <Label prefHeight="32.0" prefWidth="230.0" text="Délai pour rentrer les notes:" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                               <Label prefHeight="32.0" prefWidth="230.0" text="Délai pour justifier une absence:" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                              <TextField fx:id="delaisNotesField" onAction="#modifierDelaisNotes" GridPane.rowIndex="1">
+                              <TextField fx:id="delayGradesField" onAction="#changeDelayGrades" GridPane.rowIndex="1">
                                  <GridPane.margin>
                                     <Insets left="25.0" right="25.0" />
                                  </GridPane.margin>
                               </TextField>
                            </children>
                         </GridPane>
-                        <Button fx:id="absencesButton" layoutX="70.0" layoutY="92.0" mnemonicParsing="false" onAction="#selectionAbsences" prefHeight="63.0" prefWidth="449.0" text="Absences" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                        <Button fx:id="nonattendanceButton" layoutX="70.0" layoutY="92.0" mnemonicParsing="false" onAction="#selectionNonattendance" prefHeight="63.0" prefWidth="449.0" text="Absences" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                         <Button fx:id="modulesButton" mnemonicParsing="false" onAction="#selectionModules" prefHeight="63.0" prefWidth="449.0" text="Modules" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                        <Button fx:id="etudiantsButton" mnemonicParsing="false" onAction="#selectionEtudiants" prefHeight="63.0" prefWidth="449.0" text="Etudiants" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+                        <Button fx:id="studentsButton" mnemonicParsing="false" onAction="#selectionStudents" prefHeight="63.0" prefWidth="449.0" text="Etudiants" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
                      </children>
                   </GridPane>
                </children>
