--- a/scenes/vue_admin_modules.fxml
+++ b/scenes/vue_admin_modules.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="anchorModuleAdmin" stylesheets="@styles/style_admin_modules_sel_notes_prof_sel_notes.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ModuleAdminController">
+<AnchorPane fx:id="anchorModuleStudentOffice" stylesheets="@styles/style_admin_modules_sel_notes_prof_sel_notes.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ModuleAdminController">
    <children>
       <VBox prefHeight="400.0" prefWidth="640.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -23,8 +23,8 @@
                <menus>
                   <Menu mnemonicParsing="false" text="Mon compte">
                      <items>
-                        <MenuItem fx:id="retourMenu" mnemonicParsing="false" onAction="#fonctionRetour" text="Retour au menu" />
-                        <MenuItem fx:id="quitMenu" mnemonicParsing="false" onAction="#fonctionQuit" text="Quitter" />
+                        <MenuItem fx:id="backMenu" mnemonicParsing="false" onAction="#backFunction" text="Retour au menu" />
+                        <MenuItem fx:id="quitMenu" mnemonicParsing="false" onAction="#quitFunction" text="Quitter" />
                      </items>
                   </Menu>
                </menus>
@@ -48,8 +48,8 @@
                                                 <RowConstraints maxHeight="313.0" minHeight="10.0" prefHeight="277.9999877929688" vgrow="SOMETIMES" />
                                              </rowConstraints>
                                              <children>
-                                                <ComboBox fx:id="comboEleveNotes" onAction="#selectionEleveNotes" prefHeight="34.0" prefWidth="280.0" promptText="Élève" />
-                                                <TableView fx:id="tableNotesEleve" prefHeight="277.0" prefWidth="260.0" GridPane.rowIndex="1">
+                                                <ComboBox fx:id="comboGradesStudent" onAction="#selectionGradesStudent" prefHeight="34.0" prefWidth="280.0" promptText="Élève" />
+                                                <TableView fx:id="tableGradesStudent" prefHeight="277.0" prefWidth="260.0" GridPane.rowIndex="1">
                                                    <columns>
                                                       <TableColumn prefWidth="135.0" text="Nom note" />
                                                       <TableColumn prefWidth="136.0" text="note" />
@@ -77,8 +77,8 @@
                                                 <RowConstraints maxHeight="314.0" minHeight="10.0" prefHeight="314.0" vgrow="SOMETIMES" />
                                              </rowConstraints>
                                              <children>
-                                                <ComboBox fx:id="comboEleveAbsences" onAction="#selectionElevesAbsence" prefHeight="34.0" prefWidth="280.0" promptText="Élève" />
-                                                <TableView fx:id="tableAbsencesEleve" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                                                <ComboBox fx:id="comboStudentsNonattendance" onAction="#selectionStudentNonattendance" prefHeight="34.0" prefWidth="280.0" promptText="Élève" />
+                                                <TableView fx:id="tableNonattendanceStudent" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                                                    <columns>
                                                       <TableColumn prefWidth="131.0" text="date" />
                                                       <TableColumn prefWidth="140.0" text="justification" />
@@ -106,7 +106,7 @@
                                                 <RowConstraints maxHeight="312.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
                                              </rowConstraints>
                                              <children>
-                                                <TableView fx:id="tableSatisfactionCour" prefHeight="348.0" prefWidth="272.0">
+                                                <TableView fx:id="tableSatisfactionCourses" prefHeight="348.0" prefWidth="272.0">
                                                    <columns>
                                                       <TableColumn prefWidth="145.0" text="note" />
                                                       <TableColumn prefWidth="126.0" text="commentaire" />
@@ -138,7 +138,7 @@
                                     <RowConstraints maxHeight="226.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
                                  </rowConstraints>
                                  <children>
-                                    <TableView fx:id="tableNotesElevesCour" prefHeight="345.0" prefWidth="358.0">
+                                    <TableView fx:id="tableGradesStudentsCourses" prefHeight="345.0" prefWidth="358.0">
                                        <columns>
                                           <TableColumn prefWidth="83.0" text="Nom" />
                                           <TableColumn prefWidth="95.0" text="Prénom" />
