--- a/scenes/vue_etudiant_selection_note.fxml
+++ b/scenes/vue_etudiant_selection_note.fxml
@@ -17,16 +17,16 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="anchorEtuNote" stylesheets="@styles/style_add_note.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SelectionNoteEtudiantController">
+<AnchorPane fx:id="anchorGradeStudent" stylesheets="@styles/style_add_note.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SelectionNoteEtudiantController">
    <children>
-      <VBox fx:id="vbox_etudiant" prefHeight="400.0" prefWidth="640.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox fx:id="vbox_student" prefHeight="400.0" prefWidth="640.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <MenuBar VBox.vgrow="NEVER">
                <menus>
                   <Menu mnemonicParsing="false" text="Mon compte">
                      <items>
-                        <MenuItem fx:id="retourMenu" mnemonicParsing="false" onAction="#fonctionRetour" text="Retour au menu" />
-                        <MenuItem fx:id="quitMenu" mnemonicParsing="false" onAction="#fonctionQuit" text="Quitter" />
+                        <MenuItem fx:id="backMenu" mnemonicParsing="false" onAction="#backFunction" text="Retour au menu" />
+                        <MenuItem fx:id="quitMenu" mnemonicParsing="false" onAction="#quitFunction" text="Quitter" />
                      </items>
                   </Menu>
                </menus>
@@ -40,11 +40,11 @@
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <TableView fx:id="tableNotesEleve" prefHeight="367.0" prefWidth="374.0">
+                  <TableView fx:id="tableGradeStudent" prefHeight="367.0" prefWidth="374.0">
                      <columns>
                         <TableColumn fx:id="uETableColumn" prefWidth="110.0" text="UE" />
                         <TableColumn fx:id="moduleTableColumn" prefWidth="136.0" text="Module" />
-                        <TableColumn fx:id="moyenneTableColumn" prefWidth="124.0" text="Moyenne" />
+                        <TableColumn fx:id="averageGradeTableColumn" prefWidth="124.0" text="Moyenne" />
                      </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -65,15 +65,15 @@
                                           <RowConstraints maxHeight="313.0" minHeight="10.0" prefHeight="283.0" vgrow="SOMETIMES" />
                                        </rowConstraints>
                                        <children>
-                                          <ComboBox fx:id="comboModuleNotes" onAction="#selectionModuleNote" prefHeight="34.0" prefWidth="280.0" promptText="Module">
+                                          <ComboBox fx:id="comboModuleGrades" onAction="#selectionModuleGrade" prefHeight="34.0" prefWidth="280.0" promptText="Module">
                                              <GridPane.margin>
                                                 <Insets />
                                              </GridPane.margin>
                                           </ComboBox>
-                                          <TableView fx:id="tableNotesModule" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                                          <TableView fx:id="tableGradesModule" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                                              <columns>
-                                                <TableColumn fx:id="nomNoteColumn" prefWidth="135.0" text="Evaluation" />
-                                                <TableColumn fx:id="noteColumn" prefWidth="136.0" text="Note" />
+                                                <TableColumn fx:id="nameGradeColumn" prefWidth="135.0" text="Evaluation" />
+                                                <TableColumn fx:id="gradeColumn" prefWidth="136.0" text="Note" />
                                              </columns>
                                              <columnResizePolicy>
                                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -94,8 +94,8 @@
                                           <RowConstraints maxHeight="314.0" minHeight="10.0" prefHeight="314.0" vgrow="SOMETIMES" />
                                        </rowConstraints>
                                        <children>
-                                          <ComboBox fx:id="comboModuleAbsence" onAction="#selectionModuleAbsence" prefHeight="34.0" prefWidth="280.0" promptText="Module" />
-                                          <TableView fx:id="tableAbsencesModule" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                                          <ComboBox fx:id="comboModuleNonattendance" onAction="#selectionModuleNonattendance" prefHeight="34.0" prefWidth="280.0" promptText="Module" />
+                                          <TableView fx:id="tableNonattendanceModule" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                                              <columns>
                                                 <TableColumn fx:id="dateAbsenceColumn" prefWidth="131.0" text="date" />
                                                 <TableColumn fx:id="justificationColumn" prefWidth="140.0" text="justification" />
@@ -121,10 +121,10 @@
                                           <RowConstraints maxHeight="312.0" minHeight="10.0" prefHeight="87.0" vgrow="SOMETIMES" />
                                        </rowConstraints>
                                        <children>
-                                          <ComboBox fx:id="comboModuleStaisfaction" onAction="#selectionModuleSatisfaction" prefHeight="26.0" prefWidth="344.0" promptText="Module" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS" />
-                                          <ComboBox fx:id="noteSatisfactionCombo" onAction="#selectionNoteSatisfaction" prefHeight="26.0" prefWidth="79.0" promptText="Note" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                                          <TextField fx:id="commentaireSatisfactionTextField" prefHeight="165.0" prefWidth="272.0" text="commentaire" GridPane.rowIndex="2" />
-                                          <Button fx:id="ajoutSatisfactionButton" mnemonicParsing="false" onAction="#ajouterSatisfaction" prefHeight="48.0" prefWidth="174.0" text="Nouvelle satisfaction" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="TOP" />
+                                          <ComboBox fx:id="comboModuleSatisfaction" onAction="#selectionModuleSatisfaction" prefHeight="26.0" prefWidth="344.0" promptText="Module" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS" />
+                                          <ComboBox fx:id="gradeSatisfactionCombo" onAction="#selectionGradeSatisfaction" prefHeight="26.0" prefWidth="79.0" promptText="Note" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                                          <TextField fx:id="commentarySatisfactionTextField" prefHeight="165.0" prefWidth="272.0" text="commentaire" GridPane.rowIndex="2" />
+                                          <Button fx:id="addSatisfactionButton" mnemonicParsing="false" onAction="#addSatisfaction" prefHeight="48.0" prefWidth="174.0" text="Nouvelle satisfaction" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="TOP" />
                                        </children>
                                     </GridPane>
                                  </content>
