--- a/scenes/vue_absences_administration.fxml
+++ b/scenes/vue_absences_administration.fxml
@@ -23,7 +23,7 @@
               <Menu mnemonicParsing="false" text="Mon compte">
                 <items>
                   <MenuItem fx:id="backMenu" mnemonicParsing="false" onAction="#backFunction" text="retour au menu" />
-                  <MenuItem fx:id="quitMenu" mnemonicParsing="false" onAction="#quitfunction" text="Quitter" />
+                  <MenuItem fx:id="quitMenu" mnemonicParsing="false" onAction="#quitFunction" text="Quitter" />
                 </items>
               </Menu>
             </menus>
