--- a/scenes/ajout_absence.fxml
+++ b/scenes/ajout_absence.fxml
@@ -35,10 +35,10 @@
                <center>
                   <GridPane prefHeight="296.0" prefWidth="652.0">
                      <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="176.0" minWidth="10.0" prefWidth="147.6" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="175.0" minWidth="10.0" prefWidth="129.9999877929687" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="206.0" minWidth="10.0" prefWidth="133.20001220703125" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="268.0" minWidth="10.0" prefWidth="130.79998779296875" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="176.0" minWidth="10.0" prefWidth="98.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="206.0" minWidth="10.0" prefWidth="191.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="206.0" minWidth="10.0" prefWidth="85.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="268.0" minWidth="10.0" prefWidth="166.0" />
                      </columnConstraints>
                      <rowConstraints>
                         <RowConstraints maxHeight="205.0" minHeight="10.0" prefHeight="205.0" vgrow="SOMETIMES" />
@@ -51,16 +51,16 @@
                         <ComboBox fx:id="comboModuleNonattendance" layoutX="185.0" layoutY="71.0" onAction="#selectionModulenonattendance" prefHeight="26.0" prefWidth="181.0" promptText="Module" GridPane.rowIndex="1" GridPane.valignment="TOP" />
                         <Label alignment="CENTER_RIGHT" prefHeight="27.0" prefWidth="146.0" text="Heure de début:" GridPane.halignment="LEFT" GridPane.valignment="CENTER" />
                         <Label alignment="CENTER_RIGHT" layoutX="28.0" layoutY="87.0" prefHeight="24.0" prefWidth="145.0" text="Heure de fin:" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                        <GridPane GridPane.columnIndex="1">
+                        <GridPane prefWidth="171.0" GridPane.columnIndex="1">
                           <columnConstraints>
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
                           </columnConstraints>
                           <rowConstraints>
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <ComboBox fx:id="startingHourCombo" onAction="#selectionStartingHour" prefWidth="150.0" promptText="hh" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                              <ComboBox fx:id="startingHourCombo" onAction="#selectionStartingHour" prefWidth="60.0" promptText="hh" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                               <ComboBox fx:id="startingMinuteCombo" onAction="#selectionStartingMinute" prefWidth="150.0" promptText="mm" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                            </children>
                         </GridPane>
@@ -73,7 +73,7 @@
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <ComboBox fx:id="endingHourCombo" onAction="#selectionEndingHour" prefHeight="20.0" prefWidth="48.0" promptText="hh" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                              <ComboBox fx:id="endingHourCombo" onAction="#selectionEndingHour" prefHeight="20.0" prefWidth="59.0" promptText="hh" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                               <ComboBox fx:id="endingMinuteFinCombo" onAction="#selectionEndingMinute" prefWidth="150.0" promptText="mm" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                            </children>
                         </GridPane>
