--- a/scenes/vue_adminstration_bulletin.fxml
+++ b/scenes/vue_adminstration_bulletin.fxml
@@ -73,22 +73,28 @@
                      <children>
                         <TableView fx:id="tableAverageGradeStudent" prefHeight="200.0" prefWidth="200.0">
                           <columns>
-                            <TableColumn fx:id="moduleColumn" prefWidth="129.0" text="Module" />
-                            <TableColumn fx:id="averageGradeColumn" minWidth="0.0" prefWidth="96.0" text="Moyenne" />
-                              <TableColumn fx:id="retakeColumn" minWidth="0.0" prefWidth="89.0" text="Rattrapage" />
+                            <TableColumn fx:id="moduleColumn" editable="false" prefWidth="129.0" text="Module" />
+                            <TableColumn fx:id="averageGradeColumn" editable="false" minWidth="0.0" prefWidth="96.0" text="Moyenne" />
+                              <TableColumn fx:id="retakeColumn" editable="false" minWidth="0.0" prefWidth="89.0" text="Rattrapage" />
                           </columns>
                            <GridPane.margin>
                               <Insets right="5.0" />
                            </GridPane.margin>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
                         </TableView>
                         <TableView fx:id="tableNonattendanceStudent" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
                           <columns>
-                            <TableColumn fx:id="NonattendanceDateColumn" prefWidth="165.0" text="Date de l'absence" />
-                            <TableColumn fx:id="justificationColumn" prefWidth="149.20001220703125" text="Justification" />
+                            <TableColumn fx:id="NonattendanceDateColumn" editable="false" prefWidth="165.0" text="Date de l'absence" />
+                            <TableColumn fx:id="justificationColumn" editable="false" prefWidth="149.20001220703125" text="Justification" />
                           </columns>
                            <GridPane.margin>
                               <Insets left="5.0" />
                            </GridPane.margin>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
                         </TableView>
                      </children>
                   </GridPane>
