--- a/scenes/vue_absences_administration.fxml
+++ b/scenes/vue_absences_administration.fxml
@@ -41,12 +41,12 @@
                      <children>
                         <TableView fx:id="tableNonattendance" prefHeight="140.0" prefWidth="647.0">
                           <columns>
-                            <TableColumn prefWidth="126.0" text="Nom" />
-                            <TableColumn prefWidth="86.0" text="Prenom" />
-                              <TableColumn prefWidth="100.0" text="Identifiant" />
-                              <TableColumn prefWidth="102.0" text="Module" />
-                              <TableColumn prefWidth="109.0" text="Date" />
-                              <TableColumn prefWidth="123.0" text="Justification" />
+                            <TableColumn fx:id="nameColumn" editable="false" prefWidth="126.0" text="Nom" />
+                            <TableColumn fx:id="surnameColumn" editable="false" prefWidth="86.0" text="Prenom" />
+                              <TableColumn fx:id="idColumn" editable="false" prefWidth="100.0" text="Identifiant" />
+                              <TableColumn fx:id="moduleColumn" editable="false" prefWidth="102.0" text="Module" />
+                              <TableColumn fx:id="dateColumn" editable="false" prefWidth="109.0" text="Date" />
+                              <TableColumn fx:id="justificationColumn" editable="false" prefWidth="123.0" text="Justification" />
                           </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
