--- a/scenes/vue_admin_modules.fxml
+++ b/scenes/vue_admin_modules.fxml
@@ -51,8 +51,8 @@
                                                 <ComboBox fx:id="comboGradesStudent" onAction="#selectionGradesStudent" prefHeight="34.0" prefWidth="280.0" promptText="Élève" />
                                                 <TableView fx:id="tableGradesStudent" prefHeight="277.0" prefWidth="260.0" GridPane.rowIndex="1">
                                                    <columns>
-                                                      <TableColumn prefWidth="135.0" text="Evaluation" />
-                                                      <TableColumn prefWidth="136.0" text="Note" />
+                                                      <TableColumn fx:id="testColumn" prefWidth="135.0" text="Evaluation" />
+                                                      <TableColumn fx:id="gradeColumn" prefWidth="136.0" text="Note" />
                                                    </columns>
                                                    <columnResizePolicy>
                                                       <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -80,8 +80,8 @@
                                                 <ComboBox fx:id="comboStudentsNonattendance" onAction="#selectionStudentNonattendance" prefHeight="34.0" prefWidth="280.0" promptText="Élève" />
                                                 <TableView fx:id="tableNonattendanceStudent" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                                                    <columns>
-                                                      <TableColumn prefWidth="131.0" text="date" />
-                                                      <TableColumn prefWidth="140.0" text="justification" />
+                                                      <TableColumn fx:id="dateColumn" prefWidth="131.0" text="date" />
+                                                      <TableColumn fx:id="justificationColumn" prefWidth="140.0" text="justification" />
                                                    </columns>
                                                    <columnResizePolicy>
                                                       <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -108,8 +108,8 @@
                                              <children>
                                                 <TableView fx:id="tableSatisfactionCourses" prefHeight="348.0" prefWidth="272.0">
                                                    <columns>
-                                                      <TableColumn prefWidth="145.0" text="note" />
-                                                      <TableColumn prefWidth="126.0" text="commentaire" />
+                                                      <TableColumn fx:id="gradeSatisfactionColumn" prefWidth="145.0" text="note" />
+                                                      <TableColumn fx:id="commentaryColumn" prefWidth="126.0" text="commentaire" />
                                                    </columns>
                                                    <columnResizePolicy>
                                                       <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -140,10 +140,10 @@
                                  <children>
                                     <TableView fx:id="tableGradesStudentsCourses" prefHeight="345.0" prefWidth="358.0">
                                        <columns>
-                                          <TableColumn prefWidth="83.0" text="Nom" />
-                                          <TableColumn prefWidth="95.0" text="Prénom" />
-                                          <TableColumn prefWidth="81.0" text="Note" />
-                                          <TableColumn prefWidth="108.0" text="Identifiant" />
+                                          <TableColumn fx:id="nameColumn" prefWidth="83.0" text="Nom" />
+                                          <TableColumn fx:id="surnameColumn" prefWidth="95.0" text="Prénom" />
+                                          <TableColumn fx:id="gradeModuleColumn" prefWidth="81.0" text="Note" />
+                                          <TableColumn fx:id="idColumn" prefWidth="108.0" text="Identifiant" />
                                        </columns>
                                        <columnResizePolicy>
                                           <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
