--- a/scenes/styles/style_admin_bulletin.css
+++ b/scenes/styles/style_admin_bulletin.css
@@ -42,13 +42,16 @@
 
 .tab-header-background
 {
-    -fx-background-color: #f0f4ff;
+    -fx-background-color: #f0f4ff;  
+    -fx-border-width: 0 0 1 0;
     -fx-border-color: rgb(180, 180, 180);
 }
 
 .table-view
 {
     -fx-color: #f0f4ff;
+    -fx-padding: 1px;
+    -fx-border-width: 3px;
     -fx-border-color: rgb(47, 84, 151);
 }
 
@@ -64,6 +67,7 @@
 
 .table-column
 {
+    -fx-border-width: 1 1 0 0;
     -fx-border-color: rgb(165, 165, 165);
 }
 
@@ -75,4 +79,9 @@
 .combo-box
 {
     -fx-color: #c4ceff;
+}
+
+GridPane
+{
+    -fx-padding: 0 5 0 5;
 }
