scene with a function in menuItem Validation all grade

--- a/scenes/ajout_note.fxml
+++ b/scenes/ajout_note.fxml
@@ -29,7 +29,7 @@
               </Menu>
                   <Menu mnemonicParsing="false" text="valider note">
                      <items>
-                        <MenuItem fx:id="validationGradeItem" mnemonicParsing="false" onAction="#backFunction" text="valider note et revenir" />
+                        <MenuItem fx:id="validationGradeItem" mnemonicParsing="false" onAction="#validationAllGrade" text="tout valider et revenir" />
                      </items>
                   </Menu>
             </menus>
