--- a/scenes/ajout_note.fxml
+++ b/scenes/ajout_note.fxml
@@ -71,8 +71,7 @@
                           <columns>
                             <TableColumn fx:id="nameColumn" prefWidth="218.0" text="Nom" />
                             <TableColumn fx:id="surnameColumn" prefWidth="202.0" text="Prénom" />
-                              <TableColumn fx:id="idColumn" prefWidth="219.0" text="identifiant" />
-                              <TableColumn fx:id="gradeColumn" prefWidth="219.0" text="Note" />
+                              <TableColumn fx:id="gradeColumn" onEditCommit="#onEditGrade" prefWidth="219.0" text="Note" />
                           </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
