--- a/scenes/vue_admin_modules.fxml
+++ b/scenes/vue_admin_modules.fxml
@@ -23,7 +23,7 @@
                <menus>
                   <Menu mnemonicParsing="false" text="Mon compte">
                      <items>
-                        <MenuItem fx:id="backMenu" mnemonicParsing="false" onAction="#backFunction" text="Retour au menu" />
+                        <MenuItem fx:id="backMenu" mnemonicParsing="false" onAction="#backFunction" text="Retour" />
                         <MenuItem fx:id="quitMenu" mnemonicParsing="false" onAction="#quitFunction" text="Quitter" />
                      </items>
                   </Menu>
@@ -80,8 +80,8 @@
                                                 <ComboBox fx:id="comboStudentsNonattendance" onAction="#selectionStudentNonattendance" prefHeight="34.0" prefWidth="280.0" promptText="Élève" />
                                                 <TableView fx:id="tableNonattendanceStudent" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                                                    <columns>
-                                                      <TableColumn fx:id="dateColumn" prefWidth="131.0" text="date" />
-                                                      <TableColumn fx:id="justificationColumn" prefWidth="140.0" text="justification" />
+                                                      <TableColumn fx:id="dateColumn" prefWidth="131.0" text="Date" />
+                                                      <TableColumn fx:id="justificationColumn" prefWidth="140.0" text="Justification" />
                                                    </columns>
                                                    <columnResizePolicy>
                                                       <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -108,8 +108,8 @@
                                              <children>
                                                 <TableView fx:id="tableSatisfactionCourses" prefHeight="348.0" prefWidth="272.0">
                                                    <columns>
-                                                      <TableColumn fx:id="gradeSatisfactionColumn" prefWidth="145.0" text="note" />
-                                                      <TableColumn fx:id="commentaryColumn" prefWidth="126.0" text="commentaire" />
+                                                      <TableColumn fx:id="gradeSatisfactionColumn" prefWidth="145.0" text="Note" />
+                                                      <TableColumn fx:id="commentaryColumn" prefWidth="126.0" text="Commentaire" />
                                                    </columns>
                                                    <columnResizePolicy>
                                                       <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
