--- a/scenes/vue_etudiant_selection_note.fxml
+++ b/scenes/vue_etudiant_selection_note.fxml
@@ -25,7 +25,7 @@
                <menus>
                   <Menu mnemonicParsing="false" text="Mon compte">
                      <items>
-                        <MenuItem fx:id="backMenu" mnemonicParsing="false" onAction="#backFunction" text="Retour au menu" />
+                        <MenuItem fx:id="backMenu" mnemonicParsing="false" onAction="#backFunction" text="Retour" />
                         <MenuItem fx:id="quitMenu" mnemonicParsing="false" onAction="#quitFunction" text="Quitter" />
                      </items>
                   </Menu>
@@ -94,11 +94,17 @@
                                           <RowConstraints maxHeight="314.0" minHeight="10.0" prefHeight="314.0" vgrow="SOMETIMES" />
                                        </rowConstraints>
                                        <children>
-                                          <ComboBox fx:id="comboModuleNonattendance" onAction="#selectionModuleNonattendance" prefHeight="34.0" prefWidth="280.0" promptText="Module" />
+                                          <ComboBox fx:id="comboModuleNonattendance" onAction="#selectionModuleNonattendance" prefHeight="34.0" prefWidth="280.0" promptText="Module">
+                                             <GridPane.margin>
+                                                <Insets top="5.0" />
+                                             </GridPane.margin>
+                                             <padding>
+                                                <Insets bottom="5.0" top="5.0" />
+                                             </padding></ComboBox>
                                           <TableView fx:id="tableNonattendanceModule" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                                              <columns>
-                                                <TableColumn fx:id="dateColumn" prefWidth="131.0" text="date" />
-                                                <TableColumn fx:id="justificationColumn" prefWidth="140.0" text="justification" />
+                                                <TableColumn fx:id="dateColumn" prefWidth="131.0" text="Date" />
+                                                <TableColumn fx:id="justificationColumn" prefWidth="140.0" text="Justification" />
                                              </columns>
                                              <columnResizePolicy>
                                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
