--- a/scenes/vue_liste_modules.fxml
+++ b/scenes/vue_liste_modules.fxml
@@ -20,7 +20,7 @@
             <menus>
               <Menu mnemonicParsing="false" text="Mon compte">
                 <items>
-                  <MenuItem fx:id="backMenu" mnemonicParsing="false" onAction="#backFunction" text="retour au menu" />
+                  <MenuItem fx:id="backMenu" mnemonicParsing="false" onAction="#backFunction" text="Retour" />
                   <MenuItem fx:id="quitMenu" mnemonicParsing="false" onAction="#quitFuntion" text="Quitter" />
                 </items>
               </Menu>
