--- a/scenes/vue_prof_selection_note.fxml
+++ b/scenes/vue_prof_selection_note.fxml
@@ -25,7 +25,7 @@
             <menus>
               <Menu mnemonicParsing="false" text="Mon compte">
                 <items>
-                  <MenuItem fx:id="backMenu" mnemonicParsing="false" onAction="#backFunction" text="Retour au menu" />
+                  <MenuItem fx:id="backMenu" mnemonicParsing="false" onAction="#backFunction" text="Retour" />
                   <MenuItem fx:id="quitMenu" mnemonicParsing="false" onAction="#quitFunction" text="Quitter" />
                 </items>
               </Menu>
@@ -50,7 +50,13 @@
                                               <RowConstraints maxHeight="313.0" minHeight="10.0" prefHeight="313.0" vgrow="SOMETIMES" />
                                             </rowConstraints>
                                              <children>
-                                                <ComboBox fx:id="comboStudentGrade" onAction="#selectionStudentGrade" prefHeight="34.0" prefWidth="280.0" promptText="Élève" />
+                                                <ComboBox fx:id="comboStudentGrade" onAction="#selectionStudentGrade" prefHeight="34.0" prefWidth="280.0" promptText="Élève">
+                                                   <padding>
+                                                      <Insets bottom="3.0" top="3.0" />
+                                                   </padding>
+                                                   <GridPane.margin>
+                                                      <Insets top="5.0" />
+                                                   </GridPane.margin></ComboBox>
                                                 <TableView fx:id="tableGradesStudent" prefHeight="274.0" prefWidth="251.0" GridPane.rowIndex="1">
                                                    <columns>
                                                       <TableColumn fx:id="testColumn" prefWidth="135.0" text="Evaluation" />
@@ -59,6 +65,9 @@
                                                    <columnResizePolicy>
                                                       <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                                    </columnResizePolicy>
+                                                   <GridPane.margin>
+                                                      <Insets top="10.0" />
+                                                   </GridPane.margin>
                                                 </TableView>
                                              </children>
                                           </GridPane>
@@ -79,7 +88,10 @@
                                               <RowConstraints maxHeight="314.0" minHeight="10.0" prefHeight="314.0" vgrow="SOMETIMES" />
                                             </rowConstraints>
                                              <children>
-                                                <ComboBox fx:id="comboStudentNonattendance" onAction="#selectionNonattendanceStudent" prefHeight="34.0" prefWidth="280.0" promptText="Élève" />
+                                                <ComboBox fx:id="comboStudentNonattendance" onAction="#selectionNonattendanceStudent" prefHeight="30.0" prefWidth="266.0" promptText="Élève">
+                                                   <GridPane.margin>
+                                                      <Insets bottom="3.0" />
+                                                   </GridPane.margin></ComboBox>
                                                 <TableView fx:id="tableNonattendanceStudent" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                                                   <columns>
                                                     <TableColumn fx:id="dateColumn" prefWidth="131.0" text="date" />
@@ -88,6 +100,9 @@
                                                    <columnResizePolicy>
                                                       <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                                    </columnResizePolicy>
+                                                   <GridPane.margin>
+                                                      <Insets top="3.0" />
+                                                   </GridPane.margin>
                                                 </TableView>
                                              </children>
                                           </GridPane>
