ajout absence vue taille oui

--- a/scenes/ajout_absence.fxml
+++ b/scenes/ajout_absence.fxml
@@ -33,11 +33,11 @@
             <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS" />
             <BorderPane prefHeight="371.0" prefWidth="640.0">
                <center>
-                  <GridPane prefHeight="296.0" prefWidth="652.0">
+                  <GridPane prefHeight="296.0" prefWidth="652.0" stylesheets="@styles/style_addNonattendance.css">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="176.0" minWidth="10.0" prefWidth="98.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="206.0" minWidth="10.0" prefWidth="191.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="206.0" minWidth="10.0" prefWidth="85.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="206.0" minWidth="10.0" prefWidth="195.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="206.0" minWidth="10.0" prefWidth="81.0" />
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="268.0" minWidth="10.0" prefWidth="166.0" />
                      </columnConstraints>
                      <rowConstraints>
@@ -51,7 +51,7 @@
                         <ComboBox fx:id="comboModuleNonattendance" layoutX="185.0" layoutY="71.0" onAction="#selectionModulenonattendance" prefHeight="26.0" prefWidth="181.0" promptText="Module" GridPane.rowIndex="1" GridPane.valignment="TOP" />
                         <Label alignment="CENTER_RIGHT" prefHeight="27.0" prefWidth="146.0" text="Heure de début:" GridPane.halignment="LEFT" GridPane.valignment="CENTER" />
                         <Label alignment="CENTER_RIGHT" layoutX="28.0" layoutY="87.0" prefHeight="24.0" prefWidth="145.0" text="Heure de fin:" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                        <GridPane prefWidth="171.0" GridPane.columnIndex="1">
+                        <GridPane prefHeight="157.0" prefWidth="182.0" GridPane.columnIndex="1">
                           <columnConstraints>
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                             <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
@@ -64,7 +64,7 @@
                               <ComboBox fx:id="startingMinuteCombo" prefWidth="150.0" promptText="mm" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                            </children>
                         </GridPane>
-                        <GridPane prefHeight="154.0" prefWidth="122.0" GridPane.columnIndex="3">
+                        <GridPane prefHeight="154.0" prefWidth="150.0" GridPane.columnIndex="3">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
